Correção da estilização

--- a/index.html
+++ b/index.html
@@ -54,7 +54,10 @@
                 afins.)</span
               >
             </p>
-            <button>Agende a sua consulta</button>
+            <a
+              href="https://api.whatsapp.com/send?phone=5521969151189&text=Ol%C3%A1!%20Quero%20agendar%20uma%20consulta%20na%20Clinica%20Cemear"
+              >Agende a sua consulta</a
+            >
           </div>
         </div>
       </main>
@@ -96,7 +99,10 @@
         Entre em contato e agende um horário para tirar suas dúvidas, realizar
         avaliação e planejar seus procedimentos!
       </p>
-      <button>Agende a sua consulta</button>
+      <a
+        href="https://api.whatsapp.com/send?phone=5521969151189&text=Ol%C3%A1!%20Quero%20agendar%20uma%20consulta%20na%20Clinica%20Cemear"
+        >Agende a sua consulta</a
+      >
     </div>
 
     <div class="sextaSession">
@@ -174,7 +180,10 @@
             <input type="email" />
           </label>
 
-          <button>Agende a sua consulta</button>
+          <a
+            href="https://api.whatsapp.com/send?phone=5521969151189&text=Ol%C3%A1!%20Quero%20agendar%20uma%20consulta%20na%20Clinica%20Cemear"
+            >Agende a sua consulta</a
+          >
         </div>
 
         <div>
